# SubtitleFontHelper

./: .editorconfig  .gitignore  README.md  SubtitleFontHelper.example.xml  SubtitleFontHelper.sln  copyFiles.ps1  disableAutoStart.ps1  enableAutoStart.ps1  event.man  registerETW.ps1  unregisterETW.ps1  vcpkg.json
.github/workflows/: DebugBuild.yml  ReleaseBuild.yml  msbuild.yml
FontDatabaseBuilder/: Common.h  ConsoleHelper.h  FileDeduplicate.cpp  FileDeduplicate.h  FontAnalyzer.cpp  FontAnalyzer.h  FontDatabaseBuilder.cpp  FontDatabaseBuilder.vcxproj  FontDatabaseBuilder.vcxproj.filters  Win32Helper.h  packages.config
FontLoadInterceptor/: AttachDetour.cpp  AttachDetour.h  Detour.cpp  Detour.h  EventLog.cpp  FontLoadInterceptor.vcxproj  FontLoadInterceptor.vcxproj.filters  FontQuery.pb.cpp  Resource.rc  RpcClient.cpp  RpcClient.h  dllmain.cpp  packages.config  pch.h
GDIHookLib/: CMakeLists.txt  CMakeSettings.json  Common.cpp  Common.h  DllEntry.cpp  Hook.cpp  Hook.h  export32.def  export64.def
PersistantDataLib/: PersistantData.cpp  PersistantDataLib.vcxproj  PersistantDataLib.vcxproj.filters  packages.config
SharedIncludes/: CompileSpec.h  EventLog.h  FontQuery.proto  PersistantData.h  SharedIncludes.vcxitems
SubtitleFontAutoLoaderDaemon/: Common.cpp  Common.h  EventLog.cpp  IDaemon.h  Main.cpp  Options.h  Prefetch.cpp  Prefetch.h  ProcessMonitor.cpp  ProcessMonitor.h  QueryService.cpp  QueryService.h  Resource.aps  Resource.rc  RpcServer.cpp  RpcServer.h  SubtitleFontAutoLoaderDaemon.vcxproj  SubtitleFontAutoLoaderDaemon.vcxproj.filters  TrayIcon.cpp  TrayIcon.h  pch.cpp  pch.h  resource.h
SubtitleFontHelper/: ASSReader.cpp  ASSReader.h  CMakeLists.txt  CMakeSettings.json  CommandInterface.cpp  CommandInterface.h  Common.cpp  Common.h  ConfigFile.cpp  ConfigFile.h  Daemon.cpp  Daemon.h  EntryPoint.cpp  FontDatabase.cpp  FontDatabase.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ProcessMonitor.cpp  ProcessMonitor.h
SubtitleFontHelper/quazip/: CMakeLists.txt
SubtitleFontHelper/quazip/quazip/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  quazip.pro
